--- a/styles.css
+++ b/styles.css
@@ -111,12 +111,12 @@ div#cloudcon {
   }
 
 @keyframes movearound  { 
-0% {transform: translateY(500vh);}
-100% {transform: translateY(-500vh);}
+0% {transform: translateX(200vw);}
+100% {transform: translateX(-200vw);}
 }
  @keyframes hone  { 
-0% {transform: translateY(500vh);}
-100% {transform: translateY(-500vh);}
+0% {transform: translateX(-200vw);}
+100% {transform: translateX(200vw);}
 }
 
 
