--- a/styles.css
+++ b/styles.css
@@ -111,11 +111,11 @@ div#cloudcon {
   }
 
 @keyframes movearound  { 
-0% {transform: translateX(100vw);}
+0% {transform: translateX(0);}
 100% {transform: translateX(-100vw);}
 }
  @keyframes hone  { 
-0% {transform: translateX(-100vw);}
+0% {transform: translateX(0);}
 100% {transform: translateX(100vw);}
 }
 
