--- a/styles.css
+++ b/styles.css
@@ -27,10 +27,27 @@ flex-direction: column;
 align-items: center;
 text-align: center;
 box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
-position:relative;
 z-index:150;
 position:fixed;
 top:5vmin;
+background-color: #FFFFFF;
+}
+div#footercon {
+  display: flex;
+  align-items: center;
+  }
+
+footer {
+width: 90vw;
+border: 5px solid black;
+display: flex;
+flex-direction: column;
+align-items: center;
+text-align: center;
+box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
+z-index:150;
+position:fixed;
+bottom:5vmin;
 background-color: #FFFFFF;
 }
 
