--- a/styles.css
+++ b/styles.css
@@ -52,15 +52,25 @@ background-color: #FFFFFF;
 }
 
 main{
-opacity: 0.5;
 background-color: rgba(0, 0, 0, 0.5);
 display: flex;
 flex-direction: column;
 align-items: center;
 }
-footer{
 
-  }
+div#concon{
+width: 90vw;
+border: 5px solid black;
+display: flex;
+flex-direction: column;
+align-items: center;
+text-align: center;
+box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
+z-index:150;
+position:fixed;
+bottom:5vmin;
+background-color: #FFFFFF;
+}
 
   div {
   width: 100vw;
