--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 
 }
 
-div#filler{
+div.filler{
   width:100vw;
   height:25vh;
   }
@@ -69,24 +69,12 @@ box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
 z-index:99;
 background-color: #FFFFFF;
 }
-
-  div {
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  }
-    
    h1 {
   font-size: 2rem;
   font-weight: 600;
   text-shadow: 2px 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
  
-		
-		
   h2 {
   font-size: 2rem;
   font-weight: 600;
