--- a/styles.css
+++ b/styles.css
@@ -68,26 +68,26 @@ background-color: #FFFFFF;
    h1 {
   font-size: 2rem;
   font-weight: 600;
-  text-shadow: 2px 2px 2px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
  
   h2 {
   font-size: 2rem;
   font-weight: 600;
-  text-shadow: 2px 2px 2px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
   
  h3 {
   font-size: 2rem;
   font-weight: 600;
-  text-shadow: 2px 2px 2px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
  p {
   font-size: 1rem;
   font-weight: 600;
   text-align: center;
-  text-shadow: 2px 2px 2px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
 img.cert {
