--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,9 @@ img.certtall {
 }
 
 #certcon:target {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
   
 div#cloudcon {
