--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ a.toggle-button {
   border: 5px solid black;
   box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
   background-color: #FFFFFF;
+  position:fixed;
+  top:25vh;
   }
 div.filler{
   width:100vw;
