--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,16 @@ body {
 
 }
 
+a#acert{
+  
+  }
+a#acon{
+  
+  
+  }
+
 a.toggle-button {
+  display: inline;
   text-decoration: none;
   font-size: 2em;
   border: 5px solid black;
@@ -56,11 +65,6 @@ bottom:5vmin;
 background-color: #FFFFFF;
 }
 
-main{
-display: flex;
-flex-direction: column;
-align-items: center;
-}
 
 #concon {
   display:none; 
