--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,12 @@ z-index:150;
 position:fixed;
 top:5vmin;
 }
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+  
 div#footercon {
   display: flex;
   align-items: center;
@@ -73,9 +79,7 @@ background-color: #FFFFFF;
 #concon:target {
 width: 90vw;
 border: 5px solid black;
-display: flex;
-flex-direction: column;
-align-items: center;
+display: block;
 text-align: center;
 box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
 z-index:99;
@@ -125,7 +129,21 @@ img.certtall {
   z-index: 99;
   box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
   }
-  
+#aboutcon{
+  display:none;
+  }
+  #aboutcon:target {
+    display:block;
+    width: 90vw;
+border: 5px solid black;
+text-align: center;
+box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
+z-index:99;
+background-color: #FFFFFF;
+}
+    
+    
+    
 #certcon {
   display:none;
 }
