--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,15 @@ nav {
   z-index:150;
   }
   
+div#quote-container{
+  border: 5px solid black;
+  font-size:2em;
+  text-align: center;
+  padding:10px;
+  height: 30vh;
+  width: 80vw;
+  background-color: #FFFFFF;
+  }
 
 nav ul {
   list-style-type: none; 
