--- a/styles.css
+++ b/styles.css
@@ -40,9 +40,10 @@ a.toggle-button {
   border: 5px solid black;
   border-radius:10px;
   box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.4);
-  background-color:rgba(0, 0, 0, 0.9);
+  background-color:rgba(0, 0, 0, 0.4);
   z-index: 200;
   padding: 10px;
+  text-shadow:2px 2px 4px rgba(0, 0, 0, 0.9);
   }
 div.filler{
   width:100vw;
