--- a/styles.css
+++ b/styles.css
@@ -160,4 +160,32 @@ background-color: #FFFFFF;
   flex-direction: column;
   align-items: center;
 }
+* {
+background: red;
+}
+
+.container {
+display:flex;
+flex-direction:row;
+gap: 10px;
+}
+
+.box {
+margin: 20px;
+ width:100px;
+height:100px;
+animation-name: fade;
+	animation-duration: 1s;
+	animation-timing-function: ease;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+
+}
+
+@keyframes fade {
+ 0% { box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);}
+
+100% {  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.0);}
+}
   
