--- a/styles.css
+++ b/styles.css
@@ -89,8 +89,10 @@ border: 5px solid black;
 display: block;
 text-align: center;
 box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
-z-index:99;
+z-index:250;
 background-color: #FFFFFF;
+position:fixed;
+top:25vh;
 }
    h1 {
   font-size: 2rem;
@@ -145,8 +147,10 @@ img.certtall {
 border: 5px solid black;
 text-align: center;
 box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.7);
-z-index:99;
+z-index:250;
 background-color: #FFFFFF;
+ position:fixed;
+top:25vh;
 }
     
     
@@ -156,10 +160,18 @@ background-color: #FFFFFF;
 }
 
 #certcon:target {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+width:90vw;
+height:40vh;
+display: flex;
+flex-direction: column;
+align-items: center;
+overflow: scroll;
+position:fixed;
+top:25vh;
+z-index: 250;
 }
+
+
 * {
 background: red;
 }
