--- a/styles.css
+++ b/styles.css
@@ -183,4 +183,23 @@ animation-name: fade;
 
 100% {  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.0);}
 }
-  
+
+/* Styling the track */
+#certcon::-webkit-scrollbar {
+  width: 10px;
+}
+
+#certcon::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+/* Styling the thumb */
+#certcon::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 5px;
+}
+
+/* Styling the thumb on hover */
+#certcon::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
