--- a/styles.css
+++ b/styles.css
@@ -23,21 +23,6 @@ gap: 40px;
   }
 
 
-a.toggle-button {
-  display: inline;
-  text-decoration: none;
-  color:  #FFFFFF;
-  font-size: 1em;
-  border: 5px solid black;
-  border-radius:10px;
-  box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.4);
-  background-color:rgba(0, 0, 0, 0.4);
-  z-index: 200;
-  padding: 10px;
-  text-shadow:2px 2px 4px rgba(0, 0, 0, 0.9);
-writing-mode: vertical-lr;
-  }
-
 main{
   display: flex;
   flex-direction: column;
@@ -57,10 +42,10 @@ z-index:150;
 position:fixed;
 bottom:5vmin;
 }
-#projects {
+#apiproject {
  display:none;
 }
-#projects:target {
+#apiproject:target {
 	width: 90vw;
 border: 5px solid black;
 display: flex;
