--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ background-color: #FFFFFF;
 h1 {
 font-size: 4rem;
 font-weight: 600;
-background-color: #0d6efd;
+background-color: #d63384;
 }
  
 h2 {
