--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,11 @@ background-color: #FFFFFF;
 h1 {
 font-size: 4rem;
 font-weight: 600;
+margin: 20px; 
+padding: 0;
+width: auto;  
+max-width: calc(100% - 40px);  
+white-space: normal;
 }
  
 h2 {
