--- a/styles.css
+++ b/styles.css
@@ -137,4 +137,11 @@ overflow: scroll;
 z-index: 250;
 }
 
+div.centerh1 {
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+}
+
 
