--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,14 @@ overflow: scroll;
 z-index: 250;
 }
 
+div.form{ 
+  height: 100vh;
+    display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 form { 
   padding: 15px;
   width: 70vw; 
