--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ div.form{
   justify-content: center;
 }
 
-form { 
+form.username  { 
   
   padding: 15px;
   width: 70vw; 
@@ -137,9 +137,7 @@ form {
   background-color: blue;
   color: white;
 }
-button {
-margin: 5px;
-}
+
 
 
 
