--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,24 @@ form.username  {
   color: white;
 }
 
+div.slides {
+display: flex;
+overflow-x: auto;
+scroll-snap-type: x mandatory;
+    }
+    div.indicator{
+display: flex;
+flex-shrink: 0;
+width: 100%;
+height: 300px;
+scroll-snap-align: start;
+scroll-behavior: smooth;
+background: #74ABE2;
+justify-content: center;
+align-items: center;
+font-size: 100px;
+}
+
 
 
 
