--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,14 @@ div.form{
   justify-content: center;
 }
 
+div.icons{ 
+  height: 70vh;
+    display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 form.username  { 
   
   padding: 15px;
