--- a/css/styles.css
+++ b/css/styles.css
@@ -91,8 +91,8 @@ overflow: scroll;
 z-index: 250;
 }
 
-div.form{ 
-  height: 70vh;
+div.portfolio{ 
+  height: 100vh;
     display:flex;
   flex-direction: column;
   align-items: center;
@@ -101,14 +101,6 @@ div.form{
 
 a {
 margin: 20px;
-}
-
-div.icons{ 
-  height: 70vh;
-    display:flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 form.username  { 
