--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,9 @@ body {
 margin: 0;
 padding: 0;
 }
-heading{
-height: 400px;
+header{
+ width: 100%;
+height: 100px;
  margin: 30px;
 }
 
@@ -71,4 +72,6 @@ align-items: center;
 overflow: scroll;
 z-index: 250;
 }
-
+footer{
+padding: 20px;
+}
