--- a/css/styles.css
+++ b/css/styles.css
@@ -83,8 +83,14 @@ margin-left: 30px;
 }
 
 footer{
-padding: 10px;
+padding: 5px;
  position:fixed;
  bottom: 1px;
  width: 100%;
+}
+div.skillsprogress{
+width: 80%;
+hieght:auto;
+border: 1px solid black;
+padding: 5px;
 }
