--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,10 @@ padding: 5px;
  position:fixed;
  bottom: 1px;
  width: 100%;
+ display: flex;
+ flex-direction:row;
+ align-items:center;
+ justify-content:center;
 }
 div.skillsprogress{
 width: 80%;
