--- a/css/styles.css
+++ b/css/styles.css
@@ -83,10 +83,6 @@ overflow: scroll;
 z-index: 250;
 }
 
-.skills{ 
-margin-left: 30px;
-}
-
 footer{
 padding: 5px;
  width: 100%;
@@ -98,5 +94,5 @@ padding: 5px;
 div.skillsprogress{
 width: 50%;
 hieght:auto;
-padding: 5px;
+padding: ;
 }
