--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@
 :root { 
 font-size: 16px;
 }
+h1, h2 {
+ writing-mode: vertical-lr;
+ }
+
 
 html, body {
 font-family: 'Inconsolata', monospace;
@@ -30,10 +34,6 @@ header{
  margin-left: 50px;
 }
 
-h2 {
-font-size: 2rem;
-font-weight: 600;
-}
 img.certtall {
 margin:5vmin;
 border: 5px solid black;
